--- a/pom.xml
+++ b/pom.xml
@@ -43,12 +43,17 @@
 	<dependency>
 		<groupId>edu.jhu.hlt.concrete</groupId>
 		<artifactId>concrete-protobufs</artifactId>
-		<version>1.0.15-SNAPSHOT</version>
+		<version>1.1.2</version>
 	</dependency>
 	<dependency>
 		<groupId>edu.jhu.hlt.concrete</groupId>
 		<artifactId>concrete-java</artifactId>
-		<version>1.0.15-SNAPSHOT</version>
+		<version>1.1.2</version>
+	</dependency>
+	<dependency>
+	  <groupId>edu.stanford.nlp</groupId>
+	  <artifactId>stanford-corenlp</artifactId>
+	  <version>1.3.5</version>
 	</dependency>
   </dependencies>
 </project>
