--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
       <version>1.3.3</version>
     </dependency>
     <dependency>
+      <groupId>edu.stanford.nlp</groupId>
+      <artifactId>stanford-corenlp</artifactId>
+      <version>1.3.3</version>
+      <classifier>models</classifier>
+    </dependency>
+    <dependency>
       <groupId>edu.jhu.hlt.concrete</groupId>
       <artifactId>concrete-protobufs</artifactId>
       <version>1.1.2</version>
